--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,11 +1,11 @@
 .Button {
   padding: 8px 16px;
   border-radius: 2px;
-  background-color: #3f51b5;
+  background-color: rgb(252, 236, 12);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
-  color: #fff;
+  color: #520480;
   border: 0;
   text-decoration: none;
   cursor: pointer;
@@ -22,4 +22,5 @@
 .Button:hover,
 .Button:focus {
   background-color: #303f9f;
+  color:rgb(252, 236, 12) ;
 }
